# intersect

./: ARCHITECTURE_REVIEW.md  IMPROVEMENT_GUIDE.md  README.md  index.html  package-lock.json  package.json
.cursor/plans/: points_system_and_weight_evolution_refinement_e89b3b09.plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anthropic.rs  db.rs  disco_prompts.rs  knowledge.rs  lib.rs  logging.rs  memory.rs  openai.rs  orchestrator.rs
src/components/: ApiKeyModal.tsx  ChatWindow.tsx  ConversationHistory.tsx  GovernorNotification.tsx  ImmersiveMode.tsx  ImmersiveSettings.tsx  ImmersiveThoughtBubble.tsx  MessageBubble.tsx  ParticleEffect.tsx  ParticleField.tsx  ProfileSwitcher.tsx  ReportModal.tsx  Settings.tsx  ThemeToggle.tsx  ThinkingIndicator.tsx  ThoughtBubble.tsx  ThoughtsContainer.tsx  WaveformVisualizer.tsx
src/components/icons/: index.tsx
src/constants/: agents.ts
src/hooks/: useBackgroundMusic.ts  useElevenLabsTTS.ts  useScribeTranscription.ts  useSubmitDetection.ts  useTauri.ts
src/lib/: token.ts
src/store/: index.ts
src/types/: index.ts
